--- a/index.html
+++ b/index.html
@@ -22,28 +22,35 @@
     <!--Шапка сайта-->
     <header class="page-header">
       <div class="container">
-        <div class="navigation">
-          <nav class="menu">
-            <a class="logo logo-header" href="/"> <span class="web">Web</span>Studio</a>
-            <ul class="list menu">
-              <li class="menu-item"><a class="link current btn-link" href="./index.html">Студия</a></li>
-              <li class="menu-item"><a class="link btn-link" href="./portfolio.html">Портфолио</a></li>
-              <li class="menu-item"><a class="link btn-link" href="">Контакты</a></li>
-            </ul>
-          </nav>
-          <ul class="list menu contacts-info">
+        <nav class="header-nav">
+          <a class="logo logo-header" href="/">
+            <span class="web">Web</span>Studio</a
+          >
+          <ul class="list menu">
             <li class="menu-item">
-              <a class="link contacts btn-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="link current btn-link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="link contacts btn-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="link btn-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="menu-item">
+              <a class="link btn-link" href="">Контакты</a>
             </li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="list wrap">
+          <li class="wrap-item">
+            <a class="link contacts btn-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="wrap-item">
+            <a class="link contacts btn-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
 
@@ -61,156 +68,155 @@
 
       <section class="section">
         <div class="container">
-        <h2 class="hidden">Наши преимущества</h2>
-        <ul class="list benefits">
-          <li>
-            <h3 class="text-title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения
-              кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="text-title">Современные технологии</h3>
-            <p class="text list">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </div>
-      </section>
-    
-      <section class="section our-goal">
-        <div class="container">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <div class="flex-container">
-          <ul class="list card-set">
-            <li class="item">
-              <div class="card-thum">
-              <img
-                src="./images/box1.svg"
-                alt="Человек печатает"
-                width="370"
-                height="294"
-              />
-            </div>
+          <h2 class="hidden">Наши преимущества</h2>
+          <ul class="list benefits">
+            <li>
+              <h3 class="text-title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
             </li>
-            <li class="item">
-              <div class="card-thum">
-              <img
-                src="./images/box2.svg"
-                alt="iPhone в руке"
-                width="370"
-                height="294"
-              />
-            </div>
+            <li>
+              <h3 class="text-title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
             </li>
-            <li class="item">
-              <div class="card-thum">
-              <img
-                src="./images/box3.svg"
-                alt="Планшет в руках"
-                width="370"
-                height="294"
-              />
-            </div>
+            <li>
+              <h3 class="text-title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="text-title">Современные технологии</h3>
+              <p class="text list">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
             </li>
           </ul>
-      </div>
-      </div>
+        </div>
+      </section>
+
+      <section class="section our-goal">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <div class="flex-container">
+            <ul class="list card-set">
+              <li class="item">
+                <div class="card-thum">
+                  <img
+                    src="./images/box1.svg"
+                    alt="Человек печатает"
+                    width="370"
+                    height="294"
+                  />
+                </div>
+              </li>
+              <li class="item">
+                <div class="card-thum">
+                  <img
+                    src="./images/box2.svg"
+                    alt="iPhone в руке"
+                    width="370"
+                    height="294"
+                  />
+                </div>
+              </li>
+              <li class="item">
+                <div class="card-thum">
+                  <img
+                    src="./images/box3.svg"
+                    alt="Планшет в руках"
+                    width="370"
+                    height="294"
+                  />
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <section class="section our-team">
         <div class="container">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list team">
-          <li class="team-item">
-            <div class="card-thum">
-            <img
-              src="./images/img1.jpg"
-              alt="фото"
-              width="270"
-              height="260"
-            />
-            </div>
-            <div class="team-info">
-              <h3 class="image-title">Игорь Демьяненко</h3>
-              <p class="image-text">Product Designer</p>
-            </div>
-          </li>
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team">
+            <li class="team-item">
+              <div class="card-thum">
+                <img
+                  src="./images/img1.jpg"
+                  alt="фото"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-info">
+                <h3 class="image-title">Игорь Демьяненко</h3>
+                <p class="image-text">Product Designer</p>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="card-thum">
-            <img
-              src="./images/img2.jpg"
-              alt="фото"
-              width="270"
-              height="260"
-            />
-            </div>
-            <div class="team-info">
-              <h3 class="image-title">Ольга Репина</h3>
-              <p class="image-text">Frontend Developer</p>
-            </div>
-          </li>
+            <li class="team-item">
+              <div class="card-thum">
+                <img
+                  src="./images/img2.jpg"
+                  alt="фото"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-info">
+                <h3 class="image-title">Ольга Репина</h3>
+                <p class="image-text">Frontend Developer</p>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="card-thum">
-            <img
-              src="./images/img3.jpg"
-              alt="фото"
-              width="270"
-              height="260"
-            />
-            </div>
-            <div class="team-info">
-              <h3 class="image-title">Николай Тарасов</h3>
-              <p class="image-text">Marketing</p>
-           </div>
-          </li>
+            <li class="team-item">
+              <div class="card-thum">
+                <img
+                  src="./images/img3.jpg"
+                  alt="фото"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-info">
+                <h3 class="image-title">Николай Тарасов</h3>
+                <p class="image-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="card-thum">
-              <img
-              src="./images/img4.jpg"
-              alt="фото"
-              width="270"
-              height="260"
-            />
-            </div>
-            <div class="team-info">
-              <h3 class="image-title">Михаил Ермаков</h3>
-              <p class="image-text list">UI Designer</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+            <li class="team-item">
+              <div class="card-thum">
+                <img
+                  src="./images/img4.jpg"
+                  alt="фото"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-info">
+                <h3 class="image-title">Михаил Ермаков</h3>
+                <p class="image-text list">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-      
     </main>
 
     <!--Подвал-->
     <footer class="footer">
       <div class="container">
         <div class="logo-footer">
-        <a class="logo" href="/">
-          <span class="web">Web</span><span class="studio">Studio</span></a
-        >
+          <a class="logo" href="/">
+            <span class="web">Web</span><span class="studio">Studio</span></a
+          >
         </div>
         <ul class="list">
           <li>
