--- a/portfolio.html
+++ b/portfolio.html
@@ -22,36 +22,35 @@
     <!--Шапка сайта-->
     <header class="page-header">
       <div class="container">
-        <div class="navigation">
-          <nav class="menu">
-            <a class="logo logo-header" href="/">
-              <span class="web">Web</span>Studio</a
-            >
-            <ul class="list menu">
-              <li class="menu-item">
-                <a class="link current btn-link" href="./index.html">Студия</a>
-              </li>
-              <li class="menu-item">
-                <a class="link btn-link" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="menu-item">
-                <a class="link btn-link" href="">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="list menu contacts-info">
+        <nav class="header-nav">
+          <a class="logo logo-header" href="/">
+            <span class="web">Web</span>Studio</a
+          >
+          <ul class="list menu">
             <li class="menu-item">
-              <a class="link contacts btn-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="link current btn-link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="link contacts btn-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="link btn-link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="menu-item">
+              <a class="link btn-link" href="">Контакты</a>
             </li>
           </ul>
-        </div>
+        </nav>
+
+        <ul class="list wrap">
+          <li class="wrap-item">
+            <a class="link contacts btn-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="wrap-item">
+            <a class="link contacts btn-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
 
