--- a/index.html
+++ b/index.html
@@ -22,78 +22,84 @@
     <!--Шапка сайта-->
     <header class="page-header">
       <div class="container">
-        <nav class="header-nav">
-          <a class="logo logo-header" href="/">
-            <span class="web">Web</span>Studio</a
-          >
-          <ul class="list menu">
-            <li class="menu-item">
-              <a class="link current btn-link" href="./index.html">Студия</a>
+        <div class="wrap-nav">
+          <nav class="nav">
+            <a class="logo" href="/"> <span class="web">Web</span>Studio</a>
+            <ul class="list menu">
+              <li class="menu-item">
+                <a class="link current header-link" href="./index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="link header-link" href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="link header-link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="list wrap">
+            <li class="wrap-item">
+              <a
+                class="link contacts header-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="menu-item">
-              <a class="link btn-link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="menu-item">
-              <a class="link btn-link" href="">Контакты</a>
+            <li class="wrap-item">
+              <a class="link contacts header-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-
-        <ul class="list wrap">
-          <li class="wrap-item">
-            <a class="link contacts btn-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="wrap-item">
-            <a class="link contacts btn-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
     <!--Уникальный контент страницы-->
     <main>
-      <section class="main-section">
-        <div class="container"></div>
-        <h1 class="page-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="button">Заказать услугу</button>
-      </div>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="button">Заказать услугу</button>
+        </div>
       </section>
 
       <section class="section">
         <div class="container">
-          <h2 class="hidden">Наши преимущества</h2>
-          <ul class="list benefits">
-            <li>
-              <h3 class="text-title">Внимание к деталям</h3>
-              <p class="text">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="list benifits">
+            <li class="benifits-item">
+              <h3 class="benifits-title">Внимание к деталям</h3>
+              <p class="benifits-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
-              <h3 class="text-title">Пунктуальность</h3>
-              <p class="text">
+            <li class="benifits-item">
+              <h3 class="benifits-title">Пунктуальность</h3>
+              <p class="benifits-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
-              <h3 class="text-title">Планирование</h3>
-              <p class="text">
+            <li class="benifits-item">
+              <h3 class="benifits-title">Планирование</h3>
+              <p class="benifits-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
-              <h3 class="text-title">Современные технологии</h3>
-              <p class="text list">
+            <li class="benifits-item">
+              <h3 class="benifits-title">Современные технологии</h3>
+              <p class="benifits-text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -102,50 +108,48 @@
         </div>
       </section>
 
-      <section class="section our-goal">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <div class="flex-container">
-            <ul class="list card-set">
-              <li class="item">
-                <div class="card-thum">
-                  <img
-                    src="./images/box1.svg"
-                    alt="Человек печатает"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-              </li>
-              <li class="item">
-                <div class="card-thum">
-                  <img
-                    src="./images/box2.svg"
-                    alt="iPhone в руке"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-              </li>
-              <li class="item">
-                <div class="card-thum">
-                  <img
-                    src="./images/box3.svg"
-                    alt="Планшет в руках"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-              </li>
-            </ul>
-          </div>
+          <ul class="list card-set">
+            <li class="card-set-item">
+              <div class="card-thum">
+                <img
+                  src="./images/box1.svg"
+                  alt="Человек печатает"
+                  width="370"
+                  height="294"
+                />
+              </div>
+            </li>
+            <li class="card-set-item">
+              <div class="card-thum">
+                <img
+                  src="./images/box2.svg"
+                  alt="iPhone в руке"
+                  width="370"
+                  height="294"
+                />
+              </div>
+            </li>
+            <li class="card-set-item">
+              <div class="card-thum">
+                <img
+                  src="./images/box3.svg"
+                  alt="Планшет в руках"
+                  width="370"
+                  height="294"
+                />
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
       <section class="section our-team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list team">
+          <ul class="list team-list">
             <li class="team-item">
               <div class="card-thum">
                 <img
@@ -155,9 +159,9 @@
                   height="260"
                 />
               </div>
-              <div class="team-info">
-                <h3 class="image-title">Игорь Демьяненко</h3>
-                <p class="image-text">Product Designer</p>
+              <div class="team-wrap">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
               </div>
             </li>
 
@@ -170,9 +174,9 @@
                   height="260"
                 />
               </div>
-              <div class="team-info">
-                <h3 class="image-title">Ольга Репина</h3>
-                <p class="image-text">Frontend Developer</p>
+              <div class="team-wrap">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
               </div>
             </li>
 
@@ -185,9 +189,9 @@
                   height="260"
                 />
               </div>
-              <div class="team-info">
-                <h3 class="image-title">Николай Тарасов</h3>
-                <p class="image-text">Marketing</p>
+              <div class="team-wrap">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
               </div>
             </li>
 
@@ -200,9 +204,9 @@
                   height="260"
                 />
               </div>
-              <div class="team-info">
-                <h3 class="image-title">Михаил Ермаков</h3>
-                <p class="image-text list">UI Designer</p>
+              <div class="team-wrap">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text list">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -213,11 +217,9 @@
     <!--Подвал-->
     <footer class="footer">
       <div class="container">
-        <div class="logo-footer">
-          <a class="logo" href="/">
-            <span class="web">Web</span><span class="studio">Studio</span></a
-          >
-        </div>
+        <a class="logo-footer" href="/">
+          <span class="web">Web</span><span class="studio">Studio</span></a
+        >
         <ul class="list">
           <li>
             <a class="link contacts-footer" href="">
