--- a/portfolio.html
+++ b/portfolio.html
@@ -22,43 +22,47 @@
     <!--Шапка сайта-->
     <header class="page-header">
       <div class="container">
-        <nav class="header-nav">
-          <a class="logo logo-header" href="/">
-            <span class="web">Web</span>Studio</a
-          >
-          <ul class="list menu">
-            <li class="menu-item">
-              <a class="link current btn-link" href="./index.html">Студия</a>
+        <div class="wrap-nav">
+          <nav class="nav">
+            <a class="logo" href="/"> <span class="web">Web</span>Studio</a>
+            <ul class="list menu">
+              <li class="menu-item">
+                <a class="link header-link" href="./index.html">Студия</a>
+              </li>
+              <li class="menu-item">
+                <a class="link current header-link" href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="link header-link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="list wrap">
+            <li class="wrap-item">
+              <a
+                class="link contacts header-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="menu-item">
-              <a class="link btn-link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="menu-item">
-              <a class="link btn-link" href="">Контакты</a>
+            <li class="wrap-item">
+              <a class="link contacts header-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-
-        <ul class="list wrap">
-          <li class="wrap-item">
-            <a class="link contacts btn-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="wrap-item">
-            <a class="link contacts btn-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
     <!--Уникальный контент страницы-->
     <main>
-      <section class="section portfolio-section">
+      <section class="section">
         <div class="container">
-          <h1 class="hidden">Наши работы</h1>
+          <h1 class="visually-hidden">Наши работы</h1>
           <ul class="list nav-portfolio">
             <li class="nav-portfolio-item">
               <button type="button" class="btn">Все</button>
@@ -86,7 +90,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Технокряк</h2>
+                <h2 class="picture-title">Технокряк</h2>
                 <p class="desc">Веб-сайт</p>
               </div>
             </li>
@@ -98,7 +102,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Постер New Orlean vs Golden Star</h2>
+                <h2 class="picture-title">Постер New Orlean vs Golden Star</h2>
                 <p class="desc">Дизайн</p>
               </div>
             </li>
@@ -110,7 +114,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Ресторан Seafood</h2>
+                <h2 class="picture-title">Ресторан Seafood</h2>
                 <p class="desc">Приложение</p>
               </div>
             </li>
@@ -122,7 +126,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Проект Prime</h2>
+                <h2 class="picture-title">Проект Prime</h2>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
@@ -146,7 +150,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Inspiration has no Borders</h2>
+                <h2 class="picture-title">Inspiration has no Borders</h2>
                 <p class="desc">Веб-сайт</p>
               </div>
             </li>
@@ -158,7 +162,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Издание Limited Edition</h2>
+                <h2 class="picture-title">Издание Limited Edition</h2>
                 <p class="desc">Дизайн</p>
               </div>
             </li>
@@ -170,7 +174,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Проект LAB</h2>
+                <h2 class="picture-title">Проект LAB</h2>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
@@ -182,7 +186,7 @@
                 height="294"
               />
               <div class="picture-content">
-                <h2 class="caption">Growing Business</h2>
+                <h2 class="picture-title">Growing Business</h2>
                 <p class="desc">Приложение</p>
               </div>
             </li>
@@ -193,11 +197,9 @@
     <!--Подвал-->
     <footer class="footer">
       <div class="container">
-        <div class="logo-footer">
-          <a class="logo" href="/">
-            <span class="web">Web</span><span class="studio">Studio</span></a
-          >
-        </div>
+        <a class="logo-footer" href="/">
+          <span class="web">Web</span><span class="studio">Studio</span></a
+        >
         <ul class="list">
           <li>
             <a class="link contacts-footer" href="">
