--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!--Уникальный контент страницы-->
     <main>
-      <section class="hero">
+      <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />
@@ -77,27 +77,51 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="list benifits">
             <li class="benifits-item">
+              <button class="button-icon">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </button>
+
               <h3 class="benifits-title">Внимание к деталям</h3>
               <p class="benifits-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="benifits-item">
+            <li class="benifits-item icon-clock">
+              <button class="button-icon">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </button>
+
               <h3 class="benifits-title">Пунктуальность</h3>
               <p class="benifits-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="benifits-item">
+            <li class="benifits-item icon-diagram">
+              <button class="button-icon">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </button>
+
               <h3 class="benifits-title">Планирование</h3>
               <p class="benifits-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="benifits-item">
+            <li class="benifits-item icon-astronaut">
+              <button class="button-icon">
+                <svg width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </button>
+
               <h3 class="benifits-title">Современные технологии</h3>
               <p class="benifits-text">
                 Значимость этих проблем настолько очевидна, что реализация
