--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           <ul class="list picture">
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-1.jpg"
+                src="./images/img-portfolio/img-1.jpg"
                 alt="Открытый ноутбук"
                 width="370"
                 height="294"
@@ -96,7 +96,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-2.jpg"
+                src="./images/img-portfolio/img-2.jpg"
                 alt="Баскетболисты с мячом"
                 width="370"
                 height="294"
@@ -108,7 +108,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-3.jpg"
+                src="./images/img-portfolio/img-3.jpg"
                 alt="Ресторан seafood"
                 width="370"
                 height="294"
@@ -120,7 +120,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-4.jpg"
+                src="./images/img-portfolio/img-4.jpg"
                 alt="Наушники"
                 width="370"
                 height="294"
@@ -132,7 +132,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-5.jpg"
+                src="./images/img-portfolio/img-5.jpg"
                 alt="Две коробки"
                 width="370"
                 height="294"
@@ -144,7 +144,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-6.jpg"
+                src="./images/img-portfolio/img-6.jpg"
                 alt="Монитор компьютера"
                 width="370"
                 height="294"
@@ -156,7 +156,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-7.jpg"
+                src="./images/img-portfolio/img-7.jpg"
                 alt="Открытая книга"
                 width="370"
                 height="294"
@@ -168,7 +168,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-8.jpg"
+                src="./images/img-portfolio/img-8.jpg"
                 alt="Дверная вывеска"
                 width="370"
                 height="294"
@@ -180,7 +180,7 @@
             </li>
             <li class="picture-item">
               <img
-                src="./img-portfolio/img-9.jpg"
+                src="./images/img-portfolio/img-9.jpg"
                 alt="Печатают на ноутбуке"
                 width="370"
                 height="294"
